# cq-electronics

./: .editorconfig  .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.rst  lint-python.sh  lint-rtd-requirements.sh  lint-shell.sh  poetry.toml  pyproject.toml  setup.cfg
.github/workflows/: build.yml  lint.yml  test.yml
docs/: Makefile  conf.py  contributing.rst  index.rst  installation.rst  requirements.txt
docs/connectors/: headers.rst  index.rst  rj45.rst
docs/mechanical/: din-clip.rst  din-rail.rst  index.rst
docs/rpi/: index.rst  rpi3b.rst
docs/smd/: bga.rst  index.rst
docs/sourcekit/: index.rst  pitray-clip.rst
examples/: bga.py  din_clip.py  din_rail.py  pin_header.py  pitray_clip.py  raspberry_pi_3b.py  rj45_jack.py
git-hooks/: pre-commit
src/cq_electronics/: __init__.py  colors.py  cq_containers.py  fasteners.py
src/cq_electronics/connectors/: headers.py  rj45.py
src/cq_electronics/mechanical/: __init__.py  din_clip.py  din_rail.py
src/cq_electronics/rpi/: __init__.py  rpi3b.py
src/cq_electronics/smd/: __init__.py  bga.py
src/cq_electronics/sourcekit/: __init__.py  pitray_clip.py
tests/: __init__.py  test_cq_electronics.py
