[tool.poetry]
name = "cq-electronics"
version = "0.1.0"
description = "Pure CadQuery models of various electronic boards and components."
license = "MIT"
authors = [
    "Seth Fischer <seth@fischer.nz>",
]
readme = "README.rst"
include = [
    "CHANGELOG.md",
]
homepage = "https://github.com/sethfischer/cq-electronics"
repository = "https://github.com/sethfischer/cq-electronics.git"
documentation = "https://cq-electronics.readthedocs.io"
keywords = [
    "cadquery",
    "cq",
    "cad",
    "occt",
    "electronics",
]
classifiers = [
        "Development Status :: 1 - Planning",
        "Intended Audience :: Developers",
        "Intended Audience :: Manufacturing",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: MacOS",
        "Operating System :: POSIX",
        "Operating System :: Unix",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sethfischer/cq-electronics/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
cadquery = "2.2.0b0"
casadi = "3.5.5"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
black = "^22.3.0"
doc8 = "^0.11.2"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
pytest = "^5.2"
rstcheck = "^5.0.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-serve = "^1.0.1"
sphinxcadquery = "^1.3.3"
commitizen = "^2.27.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
annotated_tag = true
version_files = [
    "docs/conf.py",
    "src/cq_electronics/__init__.py",
    "tests/test_cq_electronics.py",
    "pyproject.toml",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
