[tool.poetry]
name = "cq-electronics"
version = "0.1.0"
description = "Pure CadQuery models of various electronic boards and components."
license = "MIT"
authors = [
    "Seth Fischer <seth@fischer.nz>",
]
readme = "README.rst"
include = [
    "CHANGELOG.md",
]
homepage = "https://github.com/sethfischer/cq-electronics"
repository = "https://github.com/sethfischer/cq-electronics.git"
documentation = "https://cq-electronics.readthedocs.io"
keywords = [
    "cadquery",
    "cq",
    "cad",
    "occt",
    "electronics",
]
classifiers = [
        "Development Status :: 1 - Planning",
        "Intended Audience :: Developers",
        "Intended Audience :: Manufacturing",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: MacOS",
        "Operating System :: POSIX",
        "Operating System :: Unix",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sethfischer/cq-electronics/issues"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

cadquery = "^2.4.0"
cadquery-ocp = "7.7.0"
casadi = {version = "^3.5.6rc2", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
Sphinx = "^6.2.1"
black = "^23.3.0"
commitizen = "^3.2.2"
doc8 = "^0.11.2"
flake8 = "^5.0.0"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^1.3.0"
pytest = "^7.2.0"
rstcheck = "^6.1.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-serve = "^1.0.1"
sphinxcontrib-cadquery = "^0.8.0"

[tool.poetry.group.cq-editor]
optional = true

[tool.poetry.group.cq-editor.dependencies]
cq-editor = {git = "https://github.com/CadQuery/CQ-editor.git", rev = "adf11592c96c2d8490e1e8d332d1a9bb63f5c112"}
logbook = "^1.5.3"
pyqt5 = "^5.15.8"
pyqtgraph = "^0.13.1"
spyder = "^5.4.2"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
annotated_tag = true
major_version_zero = true
tag_format = "$version"
version_files = [
    "docs/conf.py",
    "src/cq_electronics/__init__.py",
    "tests/test_cq_electronics.py",
    "pyproject.toml",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypi]
python_version = "3.9"
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
